--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Fujishiro Otone
-SEOTitle: Otoneの世界
+title: sushitongのblog
+SEOTitle: Osushitongのblog
 header-img: img/index.jpg
-email: kurumi.zsy@gmail.com
-description: "青春如遊戲，只是不能再讀檔"
-keyword: "Otone, Otone Blog, 前端, 动漫, 游戏"
-url: "http://FujishiroOtone.github.io"          # your host, for absolute URL
+email: elementary-0@outlook.com
+description: "愿你出走半生，归来仍是少年"
+keyword: "oier,学生,动漫, 游戏"
+url: "http://sushitong-hello.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/FujishiroOtone/FujishiroOtone.github.io" # you code repository
+github_repo: "https://github.com/FujishiroOtone/sushitong-hello.github.io" # you code repository
 home_repo: "http://fujishiro.cn"
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "大切な人といつかまた巡り会えますように"
+sidebar-about-description: "左手倒影，右手年华，映照着我们质朴的初心"
 sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -21,10 +21,10 @@ sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used i
 RSS: false
 weibo_username:     _Otone
 #zhihu_username:     
-github_username:    FujishiroOtone
+github_username:    sushitong-hello.github.io
 #facebook_username: 
 jianshu_username:  3bf62aac1afc
-twitter_username:   osuHatsuneMiku
+twitter_username:   sushitong
 
 
 
@@ -79,7 +79,7 @@ gitalk:
 
 # Google Analytics
 ga_track_id: 'UA-124497414-1'            # Format: UA-xxxxxx-xx
-ga_domain: blog.fujishiro.cn               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -103,20 +103,9 @@ links: [
         title: "个人のGitHub",
         href: "https://github.com/FujishiroOtone	"
     },{
-        title: "简书·Otone",
-        href: "https://www.jianshu.com/u/3bf62aac1afc"
-    },{
-        title: "Twitter",
-        href: "https://twitter.com/osuHatsuneMiku"
-    },{
-        title: "个人のbilibili",
-        href: "https://space.bilibili.com/1880573/#/"
-    },{
-        title: "asdfv1929",
-        href: "https://asdfv1929.github.io/"
-    },{
-        title: "月小水长",
-        href: "https://inspurer.github.io/"
+        title: "qq",
+        href: "http://wpa.qq.com/msgrd?v=3&uin=3354355977&site=qq&menu=yes
+"
     }
 ]
 
