--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: sushitongのblog
-SEOTitle: Osushitongのblog
+SEOTitle: sushitongのblog
 header-img: img/index.jpg
 email: elementary-0@outlook.com
 description: "愿你出走半生，归来仍是少年"
